warnings elimination